# confium

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.nix  Cargo.toml  LICENSE.md  README.adoc  SIGNING-KEYS  cbindgen.toml  default.nix  example.rb  flake.nix  rust-toolchain  shell.nix
.github/workflows/: test-and-publish.yml  tests.yml
confium/: Cargo.toml
confium-ruby/: Gemfile  README.adoc  confium.gemspec
confium-ruby/lib/: confium.rb
confium-ruby/lib/confium/: cfm.rb  digest.rb  lib.rb  version.rb
confium-ruby/sig/: confium.rbs
confium-ruby/spec/: confium_digest_spec.rb  spec_helper.rb
confium/src/: error.rs  hash.rs  lib.rs  options.rs  stringoptions.rs  utils.rs
confium/src/ffi/: error.rs  lib.rs  options.rs  plugin.rs  utils.rs
cpp-tests/: CMakeLists.txt
cpp-tests/src/: main.cpp  version.cpp
nix/: compat.nix
plugins/hash-botan/: CMakeLists.txt  Cargo.toml
plugins/hash-botan/src/: lib.cpp  lib.rs
spec/: hash_spec.rb
src/: error.rs  hash.rs  lib.rs  utils.rs
src/ffi/: error.rs  hash.rs  lib.rs  mod.rs  options.rs  plugin.rs  utils.rs
