[package]
name = "confium"
version = "0.1.2"
authors = ["Ribose Open <open.source@ribose.com>"]
edition = "2018"
description="Open-source distributed trust store framework"
homepage="https://www.confium.org/"
repository="https://github.com/confium/confium"
categories = ["authentication", "cryptography"]
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloading = "0.7"
slog = "2.5"
slog-stdlog = "4.1"
slog-term = "2.6"
slog-async = "2.5"
snafu = "0.6"

[package.metadata.nix]
# Toggle app flake output
app = true
# Toggle flake outputs that build (checks, package and app)
build = true
